Project

General

Profile

Actions

Bug #49069

closed

mds crashes on v15.2.8 -> master upgrade decoding MMgrConfigure

Added by Sage Weil about 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    -1> 2021-01-31T14:46:03.764+0000 7f3751687700 -1 /home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/15.2.8/rpm/el8/BUILD/ceph-15.2.8/src/mgr/MetricTypes.h: In function 'std::enable_if_t<(is_same_v<T, UnknownConfigPayload> || is_same_v<T, const UnknownConfigPayload>)> _denc_friend(T&, P&) [with T = UnknownConfigPayload; P = ceph::buffer::v15_2_0::ptr::iterator_impl<true>; std::enable_if_t<(is_same_v<T, UnknownConfigPayload> || is_same_v<T, const UnknownConfigPayload>)> = void]' thread 7f3751687700 time 2021-01-31T14:46:03.766925+0000
/home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/15.2.8/rpm/el8/BUILD/ceph-15.2.8/src/mgr/MetricTypes.h: 140: ceph_abort_msg("abort() called")

 ceph version 15.2.8 (bdf3eebcd22d7d0b3dd4d5501bee5bac354d5b55) octopus (stable)
 1: (ceph::__ceph_abort(char const*, int, char const*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)+0xe5) [0x7f3756ca6e24]
 2: (std::enable_if<denc_traits<UnknownConfigPayload, void>::supported&&denc_traits<UnknownConfigPayload, void>::need_contiguous, void>::type ceph::decode<UnknownConfigPayload, denc_traits<UnknownConfigPayload, void> >(UnknownConfigPayload&, ceph::buffer::v15_2_0::list::iterator_impl<true>&)+0xab) [0x7f3756f453bb]
 3: (MMgrConfigure::decode_payload()+0x1ab3) [0x7f3756f4ec23]
 4: (decode_message(ceph::common::CephContext*, int, ceph_msg_header&, ceph_msg_footer&, ceph::buffer::v15_2_0::list&, ceph::buffer::v15_2_0::list&, ceph::buffer::v15_2_0::list&, boost::intrusive_ptr<Connection>)+0x1e6e) [0x7f3756ec9abe]
 5: (ProtocolV2::handle_message()+0x3c3) [0x7f3756f955a3]
 6: (ProtocolV2::handle_read_frame_dispatch()+0x258) [0x7f3756fa8628]
 7: (ProtocolV2::_handle_read_frame_epilogue_main()+0x95) [0x7f3756fa8725]
 8: (ProtocolV2::handle_read_frame_epilogue_main(std::unique_ptr<ceph::buffer::v15_2_0::ptr_node, ceph::buffer::v15_2_0::ptr_node::disposer>&&, int)+0x92) [0x7f3756fa9b32]
 9: (ProtocolV2::run_continuation(Ct<ProtocolV2>&)+0x3c) [0x7f3756f919fc]
 10: (AsyncConnection::process()+0x8a9) [0x7f3756f59c89]
 11: (EventCenter::process_events(unsigned int, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >*)+0xcb7) [0x7f3756fb32f7]
 12: (()+0x58eb8c) [0x7f3756fbab8c]
 13: (()+0xc2ba3) [0x7f3754cc6ba3]
 14: (()+0x814a) [0x7f375588314a]
 15: (clone()+0x43) [0x7f37543a3f23]

Related issues 1 (0 open1 closed)

Has duplicate Ceph - Bug #48994: '...kill ceph-mds -f --cluster ceph -i a' failure in upgrade:octopus-x:parallel-no-cephadm-pacificDuplicate

Actions
Actions #1

Updated by Sage Weil about 3 years ago

  • Project changed from Ceph to RADOS
  • Subject changed from mds crashes on v15.2.8 -> master upgrade to mds crashes on v15.2.8 -> master upgrade decoding MMgrConfigure
Actions #2

Updated by Sage Weil about 3 years ago

  • Status changed from Need More Info to Fix Under Review
  • Backport set to pacific
  • Pull request ID set to 39206
Actions #3

Updated by Josh Durgin about 3 years ago

  • Has duplicate Bug #48994: '...kill ceph-mds -f --cluster ceph -i a' failure in upgrade:octopus-x:parallel-no-cephadm-pacific added
Actions #4

Updated by Sage Weil about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Sage Weil about 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF